# boardgame_framework

./: README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
designthoughts/: map-cells-regions.txt  viewers.txt
dev/: install_and_configure_pyenv.sh  install_pyenv_for_centos.sh  install_pyenv_for_ubuntu.sh  install_pyenv_prereqs_ubuntu.sh  requirements.txt
docs/: Makefile  make.bat
docs/source/: authors.rst  changelog.rst  conf.py  index.rst  readme.rst
docs/source/reference/api/: modules.rst
examples/: driver.py  level1map.json  level1map.yml
requirements/: base.txt  dev.txt
src/bgfw/: actor.py  pawn.py
src/boardgame_framework/: __init__.py  cell.py  coord.py  pawn.py  phase.py  pylintrc  utils.py
src/boardgame_framework/serializers/yaml/: __init__.py
tests/: test_cell.py  test_gloom_1.py  test_serialization.py
tests/data_files/: gloomhaven_scenario1.yml  level1_auto_map.yml  level1_explicit_map.json  level1_explicit_map.yml  level1map.json  level1map.yml
tests/data_files/gloomhaven/: A1a.yml  A2a.yml  A3b.yml  A4b.yml  B1a.yml  B2a.yml  B3a.yml  B3b.yml  B4a.yml  E1b.yml  G1b.yml  I1b.yml  L1a.yml  L1b.yml  L3a.yml  M1a.yml  gloomhaven_scenario1.yml  gloomhaven_scenario2.yml  gloomhaven_scenario3.yml
