[metadata]
name = boardgame_framework
author = RabidCicada
author-email = RabidCicada+bg_framework@gmail.com
summary = A BoardGame Framework for creating and running re-usable boardgame modules
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = http://github.com/RabidCicada/boardgame_framework
project_urls =
#    Bug Tracker = https://bugs.launchpad.net/pbr/
    Documentation = https://docs.openstack.org/pbr/
    Source Code = http://github.com/RabidCicada/boardgame_framework
license = Apache-2
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python 3
keywords =
    setup
    distutils

[files]
packages_root = src
packages =
    bgfw

[entry_points]
# console_scripts =
#    pbr = pbr.cmd:main
# pbr.config.drivers =
#    plain = pbr.cfg.driver:Plain
