[metadata]
name = boardgame_framework
author = RabidCicada
author_email = RabidCicada+bg_framework@gmail.com
description = A BoardGame Framework for creating and running re-usable boardgame modules
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = http://github.com/RabidCicada/boardgame_framework
project_urls =
#    Bug Tracker = https://bugs.launchpad.net/pbr/
    Documentation = https://docs.openstack.org/pbr/
    Source Code = http://github.com/RabidCicada/boardgame_framework
license = Apache-2
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python 3
keywords =
    setup
    distutils

#Using the pbr [files] entry doesn't work for sdist packaging
#[files]
#packages_root =  src/
#packages =
#    boardgame_framework

[options]
zip_safe = True
package_dir =
  '' = src/
packages = boardgame_framework
